Make sure there's no horizontal scrollbar as horizontal scrolling is meaningless

--- a/UI/src/stylesheet.scss
+++ b/UI/src/stylesheet.scss
@@ -565,6 +565,7 @@
 */
 
 :root {
+    overflow: hidden;
     --toastify-toast-width: 450px;
 }
 
